# adb-wire

./: AGENTS.md  Cargo.toml  README.md
src/: error.rs  lib.rs  shell.rs  sync.rs  wire.rs
tests/: integration.rs
